new setup added.

--- a/sample-node-api/.env.example
+++ b/sample-node-api/.env.example
@@ -1,7 +1,92 @@
-# Server Configuration
+# =============================================================
+#  Sample Node.js API - Environment Variables
+# =============================================================
+#  Copy this file to .env and fill in your actual values.
+#  When deploying with docker-compose, these values must match
+#  the credentials set in docker-compose.yml for each service.
+#
+#  TASK: When you are assigned this project, create real
+#        credentials for each service below. Replace the
+#        placeholder values with your own secure passwords.
+# =============================================================
+
+
+# --- Server Configuration ---
+
+# Port on which the Node.js API will run
 PORT=3000
+
+# Environment: development | staging | production
 NODE_ENV=development
 
-# Redis Configuration (Optional)
-REDIS_HOST=localhost
+
+# =============================================================
+# --- MongoDB Configuration ---
+# =============================================================
+# MongoDB is used as the primary database for storing users.
+#
+# Format: mongodb://<username>:<password>@<host>:<port>/<database>?authSource=admin
+#
+# TASK: Set the username and password to match what you used
+#       when starting the MongoDB container:
+#         -e MONGO_INITDB_ROOT_USERNAME=root
+#         -e MONGO_INITDB_ROOT_PASSWORD=<your_password>
+#
+# For local development (no auth):
+#   MONGO_URL=mongodb://localhost:27017/sample_app
+#
+# For Docker deployment (with auth):
+#   MONGO_URL=mongodb://<username>:<password>@<host>:27017/sample_app?authSource=admin
+#
+MONGO_URL=mongodb://root:mongopassword@localhost:27017/sample_app?authSource=admin
+
+
+# =============================================================
+# --- Redis Configuration ---
+# =============================================================
+# Redis is used for caching and the counter feature.
+#
+# TASK: Set REDIS_PASSWORD to match docker-compose.yml -> redis
+#       service command: --requirepass <password>
+#
+# REDIS_HOST: Use "redis" inside docker-compose (service name),
+#             or "localhost" when running locally.
+# REDIS_USERNAME: Leave empty for default. Only needed if Redis
+#                 ACL is configured with a custom user.
+#
+
+REDIS_URL=
+REDIS_HOST=redis
 REDIS_PORT=6379
+REDIS_USERNAME=
+REDIS_PASSWORD=redispassword
+
+
+# =============================================================
+# --- Message Queue (RabbitMQ) Configuration ---
+# =============================================================
+# RabbitMQ is used as a message broker for event-driven tasks
+# (e.g., publishing user_created events when a new user is added).
+#
+# TASK: Set MSMQ_USERNAME and MSMQ_PASSWORD to match
+#       docker-compose.yml -> rabbitmq service:
+#         RABBITMQ_DEFAULT_USER / RABBITMQ_DEFAULT_PASS
+#
+# MSMQ_ENABLE: Set to "true" to connect to RabbitMQ at startup.
+#              Set to "false" to skip RabbitMQ (app works without it).
+#
+# MSMQ_PROTOCOL: "amqp" for plain, "amqps" for TLS/SSL.
+#
+# MSMQ_HOST: Use "rabbitmq" inside docker-compose (service name),
+#            or "localhost" when running locally.
+#
+
+MSMQ_ENABLE=true
+MSMQ_PROTOCOL=amqp
+MSMQ_HOST=rabbitmq
+MSMQ_PORT=5672
+MSMQ_USERNAME=admin
+MSMQ_PASSWORD=rabbitmqpassword
+
+# Queue name where messages will be published/consumed
+MSMQ_QUEUE=task_queue
