--- a/sample-react-app/.env.example
+++ b/sample-react-app/.env.example
@@ -1,3 +1,24 @@
-# API Configuration
-# Change this to your Node.js API URL
+# =============================================================
+#  Sample React App - Environment Variables
+# =============================================================
+#  Copy this file to .env and fill in your actual values.
+#  All Vite env variables must start with VITE_ prefix.
+# =============================================================
+
+# --- API Configuration ---
+# URL of the Node.js backend API that this frontend connects to.
+#
+# TASK: Set this to the URL where your sample-node-api is running.
+#
+# For local development (running outside Docker):
+#   VITE_API_URL=http://localhost:3000
+#
+# For docker-compose deployment (use the service name or host IP):
+#   VITE_API_URL=http://localhost:3000
+#
+# NOTE: Even inside docker-compose, the React app runs in the BROWSER,
+#       so the API URL must be reachable from the browser, NOT from
+#       inside the Docker network. Use localhost:<exposed_port> or
+#       your server's IP/domain.
+#
 VITE_API_URL=http://localhost:3000
