--- a/sample-node-api/package.json
+++ b/sample-node-api/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "mongoose": "^8.2.0",
+    "amqplib": "^0.10.4"
   }
 }
