fix: test code commited

--- a/sample-react-app/Dockerfile
+++ b/sample-react-app/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-ENV VITE_API_URL=http://161.35.229.103:3000
+ENV VITE_API_URL=http://api-deepk.zorai.cloud/:3000
 RUN npm run build
 
 FROM nginx:alpine
